--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -35,7 +35,10 @@
     "cacheProvider": "ehcache",
     "enableHibernateCache": true,
     "reactive": false,
-    "otherModules": [],
+    "otherModules": [ {
+      "name": "generator-jhipster-kotlin",
+      "version": "^0.7.0"
+    }],
     "entitySuffix": "",
     "dtoSuffix": "DTO"
   },
